--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <h1>Персональна сторінка Берчака Андрія Миколайовича</h1>
+<p>Мене звати Андрій. Мені 17 років. Навчаюсь у ПНУ ім. В. Стефаника. Хочу стати програмістом.<p>
