--- a/biography.html
+++ b/biography.html
@@ -1,5 +1,8 @@
 <h1>Персональна сторінка Берчака Андрія Миколайовича</h1>
 Назад на головну
-<h1>Мій типовий список покупок</h1>
-
-<h1>Мій улюблений десерт</h1>
+<h1>Зміст</h1>
+Базова інформація
+Дитинство
+Шкільні роки
+Поза школою
+Університет
