--- a/biography.html
+++ b/biography.html
@@ -2,7 +2,7 @@
 Назад на головну
 <h1>Зміст</h1>
 Базова інформація
-
+Мене звуть Андрій, мені 17 років. Моя сім’я – це мої улюблені мама і тато, а також сестричка Наталя, яка вчиться у першому класі і брат Олег, який вчиться у 9 класі. Мій зріст вище середнього, я темноволосий, голубоокий. За натурою оптиміст, намагаюся переконати всіх, що все буде добре. До навчання я ставлюся відповідально, тому що розумію, що в XXI столітті успішною може бути лише освічена людина. Мій улюблений предмет – інформатика, до нього я завжди готуюся дуже ретельно. Ще мені подобається історія, тому що я для себе давно усвідомив – щоб зрозуміти сьогодення, треба добре знати минуле.
 Дитинство
 Шкільні роки
 Поза школою
